// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call lambda $AWS invoke 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})": Object {
      "Next": "return 0_tmp.Payload.str",
      "Parameters": Object {
        "FunctionName": "__REPLACED_TOKEN",
        "Payload.$": "$.obj",
      },
      "Resource": "__REPLACED_ARN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.Payload.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.Payload.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda $SFN forEach 1`] = `
Object {
  "StartAt": "await $SFN.forEach(input, function(n))",
  "States": Object {
    "await $SFN.forEach(input, function(n))": Object {
      "ItemsPath": "$",
      "Iterator": Object {
        "StartAt": "return func(n)",
        "States": Object {
          "return func(n)": Object {
            "End": true,
            "InputPath": "$.n",
            "Resource": "__REPLACED_TOKEN",
            "ResultPath": "$",
            "Type": "Task",
          },
        },
      },
      "Next": "return null",
      "Parameters": Object {
        "n.$": "$$.Map.Item.Value",
      },
      "ResultPath": null,
      "Type": "Map",
    },
    "return null": Object {
      "End": true,
      "OutputPath": "$.null",
      "Parameters": Object {
        "null": null,
      },
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda $SFN map 1`] = `
Object {
  "StartAt": "return $SFN.map(input, function(n))",
  "States": Object {
    "return $SFN.map(input, function(n))": Object {
      "End": true,
      "ItemsPath": "$",
      "Iterator": Object {
        "StartAt": "return n",
        "States": Object {
          "return n": Object {
            "End": true,
            "OutputPath": "$.n",
            "Type": "Pass",
          },
        },
      },
      "Parameters": Object {
        "n.$": "$$.Map.Item.Value",
      },
      "ResultPath": "$",
      "Type": "Map",
    },
  },
}
`;

exports[`call lambda $SFN parallel 1`] = `
Object {
  "StartAt": "return $SFN.parallel([function(), function()])",
  "States": Object {
    "return $SFN.parallel([function(), function()])": Object {
      "Branches": Array [
        Object {
          "StartAt": "return 1",
          "States": Object {
            "return 1": Object {
              "End": true,
              "Result": 1,
              "ResultPath": "$",
              "Type": "Pass",
            },
          },
        },
        Object {
          "StartAt": "return 2",
          "States": Object {
            "return 2": Object {
              "End": true,
              "Result": 2,
              "ResultPath": "$",
              "Type": "Pass",
            },
          },
        },
      ],
      "End": true,
      "ResultPath": "$",
      "Type": "Parallel",
    },
  },
}
`;

exports[`call lambda $SFN wait 1`] = `
Object {
  "StartAt": "$SFN.waitFor(1)",
  "States": Object {
    "$SFN.waitFor(1)": Object {
      "Next": "return null",
      "Seconds": 1,
      "Type": "Wait",
    },
    "return null": Object {
      "End": true,
      "OutputPath": "$.null",
      "Parameters": Object {
        "null": null,
      },
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda 1`] = `
Object {
  "StartAt": "return func()",
  "States": Object {
    "return func()": Object {
      "End": true,
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$",
      "Type": "Task",
    },
  },
}
`;

exports[`call lambda with object literal parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func({str: \\"hello world\\"})",
  "States": Object {
    "0_tmp = await func({str: \\"hello world\\"})": Object {
      "Next": "return 0_tmp.str",
      "Parameters": Object {
        "str": "hello world",
      },
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with object reference parameter 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await func(obj)": Object {
      "InputPath": "$.obj",
      "Next": "return 0_tmp.str",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await func(obj)",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func(\\"hello world\\")",
  "States": Object {
    "0_tmp = await func(\\"hello world\\")": Object {
      "Next": "return 0_tmp.str",
      "Parameters": "hello world",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string reference 1`] = `
Object {
  "StartAt": "0_tmp = await func(event.str)",
  "States": Object {
    "0_tmp = await func(event.str)": Object {
      "InputPath": "$.str",
      "Next": "return 0_tmp.str",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`simple 1`] = `
Object {
  "StartAt": "return \\"hello world\\"",
  "States": Object {
    "return \\"hello world\\"": Object {
      "End": true,
      "Result": "hello world",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;
